# bachelors-thesis

./: .gitignore  CMakeLists.txt  Makefile  README.md  anf_miner.py  anf_run_settings.json  cgp_miner.py  cgp_run_settings.json  function.hpp  main.cpp  parameters.hpp  readme.md  reference_bits.hpp  runner.py
data/: adder2_2.pla  adder2_2.txt  adder3_3.pla  adder3_3.txt  adder4_4.pla  adder4_4.txt  adder5_5.pla  adder5_5.txt  adder6_6.pla  adder6_6.txt  aheadAdder3_3.pla  aheadAdder3_3.txt  aheadAdder4_4.pla  aheadAdder4_4.txt  aheadAdder5_5.pla  aheadAdder5_5.txt  aheadAdder6_6.pla  aheadAdder6_6.txt  comparator4=4.pla  comparator4=4.txt  comparator5=5.pla  comparator5=5.txt  comparator6=6.pla  comparator6=6.txt  median11.pla  median5.pla  median5.txt  median7.pla  misex1.pla  multiplier2x2.pla  multiplier2x2.txt  multiplier2x3.pla  multiplier3x3.pla  multiplier3x3.txt  multiplier3x4.pla  multiplier4x4.pla  multiplier4x4.txt  multiplier4x5.pla  multiplier5x5.pla  multiplier5x5.txt  (+12 more)
src/: function.hpp  main.cpp  my_exception.hpp  parameters.cpp  parameters.hpp  process_size.hpp  reference_bits.cpp  reference_bits.hpp  utils.cpp  utils.hpp
src/anf/: cell.hpp  circuit.cpp  circuit.hpp  formula.cpp  formula.hpp  literal.cpp  literal.hpp  main.cpp  parameters.cpp  parameters.hpp  state.hpp  term.cpp  term.hpp
src/cgp/: cell.hpp  circuit.cpp  circuit.hpp  function.hpp  main.cpp  parameters.cpp  parameters.hpp
